--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ comando N_2 git help
 comando N_3 cls (limpia el terminal)
 comando N_4 git add .
 comando N_5 git restore --staged .
+comando N_6 git commit
+comando N_7 git commit -m "modifiqué el index.html"
