--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ comando N_4 git add .
 comando N_5 git restore --staged .
 comando N_6 git commit
 comando N_7 git commit -m "modifiqué el index.html"
+comando N_8 git push (git push <></>)
