--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ comando N_5 git restore --staged .
 comando N_6 git commit
 comando N_7 git commit -m "modifiqué el index.html"
 comando N_8 git push (git push <></>)
+comando N_9 git fetch
+comando N_10 git pull
