--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@ comando N_7 git commit -m "modifiqué el index.html"
 comando N_8 git push (git push <></>)
 comando N_9 git fetch
 comando N_10 git pull
+comando N_11 git branch
+comando N_12 git checkout dev
