modifiqué el index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ comando N_4 git add .
 comando N_5 git restore --staged .
 comando N_6 git commit
 comando N_7 git commit -m "modifiqué el index.html"
-comando N_8 git push (git push <></>)
+comando N_8 git push (git push <a donde, precisamente que modulo de la rama en particular><que cosa, precisamente el nombre del usuario>)
 comando N_9 git fetch
 comando N_10 git pull
 comando N_11 git branch
