modifiqué el index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-//
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="Confeitaria, São Paulo, Postres, Dulces, Repostería, Muffins">
+    <meta name="description" content="Confeitaria ubicada en São Paulo, especializada en dulces creados con ingredientes de la más alta calidad, para deleitar a los paladares más exigentes.">
+    
+    <!-- investigar las etiquetas opengraph in https://ogp.me/ -->
+    <title>Leclerc, de K_</title>
+</head>
+<body>
+    
+</body>
+</html>
