--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
     <meta name="description" content="Confeitaria ubicada en São Paulo, especializada en dulces creados con ingredientes de la más alta calidad, para deleitar a los paladares más exigentes.">
     
     <!-- investigar las etiquetas opengraph in https://ogp.me/ -->
-    <title>Leclerc, de K_</title>
+    <title>Tiramisú, de K_</title>
+
+    <link rel="shortcut icon" href="/assets/macaron.svg" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <nav>
+            <img src="/assets/macaron.svg" alt="">
+            <ul>
+                <li>_</li>
+                <li>SERVICIOS</li>
+                <li>SOBRE NOSOTROS</li>
+            </ul>
+
+            <button>CONTÁCTANOS</button>
+        </nav>
+    </header>
     
 </body>
 </html>
