--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <button>CONTÁCTANOS</button>
         </nav>
     </header>
+
+    <main></main>
+
+    <footer></footer>
     
 </body>
 </html>
